Moved misplaced css

--- a/src/app/san-infrastructure/views/top-talkers/top-talkers.component.html
+++ b/src/app/san-infrastructure/views/top-talkers/top-talkers.component.html
@@ -1,1 +1,1 @@
-<iframe style="margin:0;width:100%;border:none;overflow:scroll;" id="form-iframe" [src]="url" ></iframe>
+<iframe style="margin:0;width:100%;border:none;overflow:scroll;" [src]="url" ></iframe>
