--- a/src/app/components/iframe/iframe.component.html
+++ b/src/app/components/iframe/iframe.component.html
@@ -1,2 +1,2 @@
-<iframe name="main-content" class="main-content" [src]="url" id="form-iframe"
+<iframe name="main-content" class="main-content" [src]="url"
         style="margin:0; width: 100%; border:none; overflow:scroll;"></iframe>
