--- a/src/app/storage-configuration/checkmark/checkmark.component.html
+++ b/src/app/storage-configuration/checkmark/checkmark.component.html
@@ -1,7 +1,6 @@
 <div class="open-form col-md-12">
   <div class="metric-value">
-    <span *ngIf="isActive() === true" class="text-green"><i class="fa fa-check-circle"></i></span>
-    <span *ngIf="isActive() === false" class="text-danger"><i class="fa fa-times-circle"></i></span>
-    <span *ngIf="isActive() === undefined" class="text-warning"><i class="fa fa-question"></i></span>
+    <span *ngIf="isActive()" class="text-green"><i class="fa fa-check-circle"></i></span>
+    <span *ngIf="!isActive()" class="text-danger"><i class="fa fa-times-circle"></i></span>
   </div>
 </div>
