--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -74,9 +74,19 @@
               </span>
               </a>
               <ul class="treeview-menu">
-                <li *ngFor="let poolLink of poolMetricLinks"><a
-                  [routerLink]="link.name | iframeUrlCreator:{iframeLink: poolLink.linkPart}"
-                  routerLinkActive="active">{{poolLink.name}}</a></li>
+                
+                <li *ngFor="let poolLink of poolMetricLinks">
+                  <a
+                    *ngIf="!poolLink.raw"
+                    [routerLink]="link.name | iframeUrlCreator:{iframeLink: poolLink.linkPart}"
+                    routerLinkActive="active"
+                  >{{poolLink.name}}</a>
+                  <a
+                    *ngIf="poolLink.raw"
+                    [routerLink]="'/overview/' + link.name + '/' + poolLink.linkPart"
+                    routerLinkActive="active"
+                  >{{poolLink.name}}</a>
+                </li>
               </ul>
             </li>
           </ul>
