--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,13 +20,18 @@
     <ul [@openClose]="enable ? 'true' : 'false'"
         (@openClose.start)="onAnimationEvent($event)"
         class="nav navbar-nav navbar-left">
-      <li [class.active]="isCurrentPeriod(periodType.DAY)"><a class="btn" (click)="setCurrentPeriod(periodType.DAY)">Last
-        Day</a></li>
-      <li [class.active]="isCurrentPeriod(periodType.WEEK)"><a class="btn" (click)="setCurrentPeriod(periodType.WEEK)">Last
-        Week</a></li>
-      <li [class.active]="isCurrentPeriod(periodType.MONTH)"><a class="btn"
-                                                                (click)="setCurrentPeriod(periodType.MONTH)">Last
-        Month</a></li>
+      <li [class.active]="isCurrentPeriod(periodType.DAY)">
+        <a class="btn" (click)="setCurrentPeriod(periodType.DAY)">Last Day</a>
+      </li>
+      <li [class.active]="isCurrentPeriod(periodType.WEEK)">
+        <a class="btn" (click)="setCurrentPeriod(periodType.WEEK)">Last Week</a>
+      </li>
+      <li [class.active]="isCurrentPeriod(periodType.MONTH)">
+        <a class="btn" (click)="setCurrentPeriod(periodType.MONTH)">Last Month</a>
+      </li>
+      <li [class.active]="isCurrentPeriod(periodType.CUSTOM)" *ngIf="isCustomEnabled()">
+        <a class="btn">Custom</a>
+      </li>
     </ul>
     <div class="logo-title">
       <img [src]="logoUrl" class="sa-logo pull-left"/>
