--- a/src/app/global-statistics/views/host-groups-capacity/host-groups-capacity.component.html
+++ b/src/app/global-statistics/views/host-groups-capacity/host-groups-capacity.component.html
@@ -1,7 +1,7 @@
 <div class="tab-pane" *ngIf="data.length > 0">
   <div class="container-fluid">
     <div class="row col-md-12">
-      <app-sasi-table class="table-right" [data]="data | systemPool2SasiGroupTable: 'hostGroups'"
+      <app-sasi-table class="table-right" [data]="data | systemPool2SasiGroupTable: 'trends'"
                       [tableOptions]="options"></app-sasi-table>
       <app-aggregated-statistics class='col-md-12 sticky-bottom' [aggregatedColumns]="options.getAggregatedColumns()"
                                  [data]="data | systemPool2SasiGroupTable" [selectedRows]="selectedRows"
