--- a/src/app/global-statistics/views/logical-capacity-statistics/logical-capacity-statistics.component.html
+++ b/src/app/global-statistics/views/logical-capacity-statistics/logical-capacity-statistics.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row">
       <app-tier-select (onSelect)="selectTier($event)"></app-tier-select>
-      <app-sasi-table [data]="data | systemPool2SasiGroupTable: 'capacityAnalysis'"
+      <app-sasi-table [data]="data | systemPool2SasiGroupTable: 'trends'"
                       [tableOptions]="options"></app-sasi-table>
       <app-grouped-aggregated-statistics class='col-md-12 sticky-bottom' [data]="data | systemPool2SasiGroupTable"
                                          [selectedRows]="selectedRows"
