--- a/src/app/common/components/route-link-formatter/route-link-formatter.component.html
+++ b/src/app/common/components/route-link-formatter/route-link-formatter.component.html
@@ -1,5 +1,9 @@
 <!--<span [className]="getAlertType(pool, type)">-->
 <span *ngIf="data != null">
-  <span class="system-name"><a
-    [routerLink]="data.id | iframeUrlCreator: {iframeLink:data.iFrameLink, anchor: data.value}">{{data.value}}</a></span>
+  <span class="system-name">
+    <a
+      [routerLink]="data.id | iframeUrlCreator: {iframeLink:data.iFrameLink, anchor: data.value}"
+      [fragment]="fragment()"
+    >{{data.value}}</a>
+  </span>
 </span>
