SAN Env form editing

--- a/src/app/storage-configuration/storage-entity-form/storage-entity-form.component.css
+++ b/src/app/storage-configuration/storage-entity-form/storage-entity-form.component.css
@@ -11,3 +11,13 @@
   width: 32px;
   height: 32px;
 }
+
+.two-cols {
+  display: grid;
+  grid-template-columns: auto auto;
+}
+
+.box-body.two-cols::before {
+  content: none;
+  display: none;
+}
