--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,9 +3,9 @@
   <!-- Logo -->
   <a href="" class="logo">
     <!-- mini logo for sidebar mini 50x50 pixels -->
-    <span class="logo-mini"><b>S</b>an</span>
+    <span class="logo-mini"><b>G</b>dash</span>
     <!-- logo for regular state and mobile devices -->
-    <span class="logo-lg"><b>Storage Analytics</b></span>
+    <span class="logo-lg"><b>Graphium Dashboard</b></span>
   </a>
 
 
