--- a/src/app/emc-global-statistics/views/vmware/vmware.component.html
+++ b/src/app/emc-global-statistics/views/vmware/vmware.component.html
@@ -1,1 +1,10 @@
-<p>vmware works!</p>
+<div class="tab-pane" *ngIf="data.length > 0">
+  <div class="container-fluid">
+    <div class="row">
+      <app-sasi-table
+        [data]="data | systemPool2SasiGroupTable : 'emcDashBoard'"
+        [tableOptions]="options"
+      ></app-sasi-table>
+    </div>
+  </div>
+</div>
