--- a/src/app/global-statistics/formatters/simple-formatter/simple-formatter.component.html
+++ b/src/app/global-statistics/formatters/simple-formatter/simple-formatter.component.html
@@ -1,9 +1,26 @@
 <div *ngIf="data != null && data.value != null" class="metric-value">
-  <span *ngIf="isAlert()" tooltip="{{getAlertMessage()}}" hide-delay="0" [class.text-not-today]="!isTodayDate()"> <i class="fa fa-exclamation-triangle"
-                                                                             ngClass="{{getViolatedRuleClass()}}"></i> {{data.value % 1 === 0 ? data.value : data.value.toFixed(1) | formatThousands}} </span>
-  <span *ngIf="!isAlert()" tooltip="{{getTooltipMessage()}}" hide-delay="0"
-        [innerHTML]="getValue() | formatThousands | safeHtml"
-  [class.text-not-today]="!isTodayDate()"></span>
-  <span class="metric-unit"> {{data.unit}}</span>
-
+  <span
+    *ngIf="isAlert()"
+    tooltip="{{ getAlertMessage() }}"
+    hide-delay="0"
+    [class.text-not-today]="!isTodayDate()"
+  >
+    <i
+      class="fa fa-exclamation-triangle"
+      ngClass="{{ getViolatedRuleClass() }}"
+    ></i>
+    {{
+      data.value % 1 === 0
+        ? data.value
+        : (data.value.toFixed(1) | formatThousands)
+    }}
+  </span>
+  <span
+    *ngIf="!isAlert()"
+    tooltip="{{ getTooltipMessage() }}"
+    hide-delay="0"
+    [innerHTML]="getValue() | formatThousands | safeHtml"
+    [class.text-not-today]="!isTodayDate()"
+  ></span>
+  <span class="metric-unit"> {{ data.unit }}</span>
 </div>
