--- a/src/app/global-statistics/formatters/unit-formatter/unit-formatter.component.html
+++ b/src/app/global-statistics/formatters/unit-formatter/unit-formatter.component.html
@@ -1,13 +1,33 @@
 <div *ngIf="data != null" class="metric-value">
-  <span *ngIf="isAlert()" tooltip="{{getAlertMessage()}}" hide-delay="0" [class.text-not-today]="!isTodayDate()"
-        ngClass="{{getViolatedRuleClass()}}">{{getValue() | formatThousands}} <span
-    class="metric-unit">{{data.unit}}</span></span>
-  <span *ngIf="!isAlert()" tooltip="{{getTooltipMessage()}}" hide-delay="0" [class.text-not-today]="!isTodayDate()">{{getValue() | formatThousands}} </span><span
-  class="metric-unit">{{data.unit}}</span>
+  <span
+    *ngIf="isAlert()"
+    tooltip="{{ getAlertMessage() }}"
+    hide-delay="0"
+    [class.text-not-today]="!isTodayDate()"
+  >
+    <i
+      class="fa fa-exclamation-triangle"
+      ngClass="{{ getViolatedRuleClass() }}"
+    ></i>
+    {{ getValue() | formatThousands }}
+    <span class="metric-unit">{{ data.unit }}</span>
+  </span>
+  <span
+    *ngIf="!isAlert()"
+    tooltip="{{ getTooltipMessage() }}"
+    hide-delay="0"
+    [class.text-not-today]="!isTodayDate()"
+  >
+    {{ getValue() | formatThousands }}
+    <span class="metric-unit">{{ data.unit }}</span>
+  </span>
 </div>
+
 <div *ngIf="data != null && hasPeak" class="peak">
-  <span tooltip="{{label}} peak" hide-delay="0"><span class="text-muted"><i
-    class="fa fa-angle-up text-red"></i>{{data.peak | formatThousands}} <span
-    class="metric-unit">{{data.unit}}</span></span>
+  <span tooltip="{{ label }} peak" hide-delay="0">
+    <span class="text-muted">
+      <i class="fa fa-angle-up text-red"></i>{{ data.peak | formatThousands }}
+      <span class="metric-unit">{{ data.unit }}</span>
+    </span>
   </span>
 </div>
