--- a/src/app/common/components/sasi-table/row-group-table/row-group-table.component.html
+++ b/src/app/common/components/sasi-table/row-group-table/row-group-table.component.html
@@ -1,52 +1,70 @@
 <div class="sasi-table-item sasi-table-controls">
-  <i class="fa expand-collapse"
-     [@iconRotate]="isCollapsed(data.groupRow.getCell('name').value)"
-     [ngClass]="'fa-angle-down'"
-     (click)="addCollapsed(data.groupRow.getCell('name').value)"
-     [tooltip]="isCollapsed(data.groupRow.getCell('name').value) ? 'Expand':'Collapse'"></i>
+  <i
+    class="fa expand-collapse"
+    [@iconRotate]="isCollapsed(data.groupRow.getCell('name').value)"
+    [ngClass]="'fa-angle-down'"
+    (click)="addCollapsed(data.groupRow.getCell('name').value)"
+    [tooltip]="
+      isCollapsed(data.groupRow.getCell('name').value) ? 'Expand' : 'Collapse'
+    "
+  ></i>
 </div>
-<div class="sasi-table-item sasi-table-alerts" *ngIf="options.isDataGrouped && options.cellDecoratorRules.length > 0">
-      <span *ngFor="let alertSum of alertSummary">
-        <span [ngClass]="alertSum.type"><i tooltip="Warning for one or more metrics" class="fa fa-exclamation-triangle"
-                                           [ngClass]="alertSum.type"></i></span>
-      </span>
+<div
+  class="sasi-table-item sasi-table-alerts"
+  *ngIf="options.isDataGrouped && options.cellDecoratorRules.length > 0"
+>
+  <span *ngFor="let alertSum of alertSummary">
+    <span [ngClass]="alertSum.type"
+      ><i
+        tooltip="Warning for one or more metrics"
+        class="fa fa-exclamation-triangle"
+        [ngClass]="alertSum.type"
+      ></i
+    ></span>
+  </span>
 </div>
-<div class="sasi-table-item sasi-table-data text-center"
-     (mouseout)="setHighlightedColumn(-1)"
-     (mouseover)="setHighlightedColumn(0)"
-     [class.highlightColumn]="isColumnHighlighted(0)"
-     [class.alt-border]="options.columns[0].altBorder"
+<div
+  class="sasi-table-item sasi-table-data text-{{options.groupLabelAlign}}"
+  (mouseout)="setHighlightedColumn(-1)"
+  (mouseover)="setHighlightedColumn(0)"
+  [class.highlightColumn]="isColumnHighlighted(0)"
+  [class.alt-border]="options.columns[0].altBorder"
 >
   <div class="sasi-table-cell">
-
     <app-cell-table
-      [componentFormatter]="options.grIndexComponentFormatter" [data]="data.groupRow.getCell('name').rawData"
+      [componentFormatter]="options.grIndexComponentFormatter"
+      [data]="data.groupRow.getCell('name').rawData"
       [label]="''"
       [options]="options"
     ></app-cell-table>
   </div>
 </div>
-<div *ngFor="let column of options.getDataColumns(); let colIndex=index"
-     [class.alt-border]="column.altBorder"
-     [class.highlightColumn]="isColumnHighlighted(colIndex+1)"
-     (mouseout)="setHighlightedColumn(-1)"
-     (mouseover)="setHighlightedColumn(colIndex+1)"
-     [class.text-right]="options.columnAlign === 'right'"
-     [class.text-center]="options.columnAlign !== 'right'"
-     class="sasi-table-item sasi-table-data">
+<div
+  *ngFor="let column of options.getDataColumns(); let colIndex = index"
+  [class.alt-border]="column.altBorder"
+  [class.highlightColumn]="isColumnHighlighted(colIndex + 1)"
+  (mouseout)="setHighlightedColumn(-1)"
+  (mouseover)="setHighlightedColumn(colIndex + 1)"
+  class="sasi-table-item sasi-table-data text-{{options.columnAlign}}"
+>
   <div class="sasi-table-cell">
-    <app-cell-table *ngIf="aggregatedValues[column.index] !== undefined" [componentFormatter]="column.aggComponent"
-                    [data]="getAggregatedValue(column.index)" [column]="column"
-                    [label]="column.label" [options]="options"
-
-
+    <app-cell-table
+      *ngIf="aggregatedValues[column.index] !== undefined"
+      [componentFormatter]="column.aggComponent"
+      [data]="getAggregatedValue(column.index)"
+      [column]="column"
+      [label]="column.label"
+      [options]="options"
     ></app-cell-table>
   </div>
   <div *ngIf="aggregatedValues[column.index] == undefined"></div>
 </div>
-<app-row-table *ngFor="let row of data.rows"
-               [class.striped-row]="options.isDataGrouped" [data]="row" [options]="options"
-               [groupName]="data.groupRow.getCell('name').value"
-               (selectEmit)="onSelectRow($event)"
-               [isCollapsed]="isCollapsed(data.groupRow.getCell('name').value)"
+<app-row-table
+  *ngFor="let row of data.rows"
+  [class.striped-row]="options.isDataGrouped"
+  [data]="row"
+  [options]="options"
+  [groupName]="data.groupRow.getCell('name').value"
+  (selectEmit)="onSelectRow($event)"
+  [isCollapsed]="isCollapsed(data.groupRow.getCell('name').value)"
 ></app-row-table>
