--- a/src/app/emc-global-statistics/views/imbalance/imbalance.component.html
+++ b/src/app/emc-global-statistics/views/imbalance/imbalance.component.html
@@ -1,1 +1,12 @@
-<p>imbalance works!</p>
+<div class="tab-pane" *ngIf="data.length > 0">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <app-sasi-table
+          [data]="data | systemPool2SasiGroupTable : 'adapters'"
+          [tableOptions]="options"
+        ></app-sasi-table>
+      </div>
+    </div>
+  </div>
+</div>
