--- a/src/app/global-statistics/views/adapters/adapters.component.html
+++ b/src/app/global-statistics/views/adapters/adapters.component.html
@@ -2,8 +2,10 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-
-        <app-sasi-table [data]="data | systemPool2SasiGroupTable: 'adapters'" [tableOptions]="options"></app-sasi-table>
+        <app-sasi-table
+          [data]="data | systemPool2SasiGroupTable : 'adapters'"
+          [tableOptions]="options"
+        ></app-sasi-table>
       </div>
     </div>
   </div>
