--- a/src/app/emc-global-statistics/views/imbalance/imbalance.component.html
+++ b/src/app/emc-global-statistics/views/imbalance/imbalance.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-12">
         <app-sasi-table
-          [data]="data | systemPool2SasiGroupTable : 'adapters'"
+          [data]="data | systemPool2SasiGroupTable : 'emcDashBoard'"
           [tableOptions]="options"
         ></app-sasi-table>
       </div>
