--- a/src/app/common/components/sasi-table/row-group-table/row-group-table.component.html
+++ b/src/app/common/components/sasi-table/row-group-table/row-group-table.component.html
@@ -24,7 +24,7 @@
   </span>
 </div>
 <div
-  class="sasi-table-item sasi-table-data text-{{options.groupLabelAlign}}"
+  class="sasi-table-item sasi-table-data text-{{options.groupLabelAlign}} group-label"
   (mouseout)="setHighlightedColumn(-1)"
   (mouseover)="setHighlightedColumn(0)"
   [class.highlightColumn]="isColumnHighlighted(0)"
