--- a/src/app/emc-global-statistics/views/vmware/vmware.component.html
+++ b/src/app/emc-global-statistics/views/vmware/vmware.component.html
@@ -1,6 +1,6 @@
 <div class="tab-pane" *ngIf="data.length > 0">
   <div class="container-fluid">
-    <div class="row">
+    <div class="row thicc-table">
       <app-sasi-table
         [data]="data | systemPool2SasiGroupTable : 'emcDashBoard'"
         [tableOptions]="options"
